--- a/src/main/resources/static/css/style-registration.css
+++ b/src/main/resources/static/css/style-registration.css
@@ -39,7 +39,7 @@ body {
     .errorchik {
         font-size: 35px;
     }
-    #email, #password{
+    #username, #password{
         width: 70%;
     }
 }
