--- a/src/main/resources/static/css/style-main.css
+++ b/src/main/resources/static/css/style-main.css
@@ -45,7 +45,7 @@ body {
     .errorchik {
         font-size: 35px;
     }
-    #email, #password{
+    #username, #password{
         width: 70%;
     }
 }
